Add HPV paper consent form

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -22,7 +22,12 @@
             <li><a href="/emails/hpv-vaccine-given">Vaccine given</a></li>
           </ul>
 
-          <h2 class="nhsuk-heading-m">School journeys</h2>
+          <h2 class="nhsuk-heading-m">Paper consent</h2>
+          <p>
+            <a href="/public/files/hpv-paper-consent.pdf">HPV paper consent form</a>
+          </p>
+
+          {# <h2 class="nhsuk-heading-m">School journeys</h2>
           <p>The journeys in these prototypes are not connected:</p>
           <ul class="nhsuk-list">
             <li><a href="/school/campaign/flu-preview">Flu consent request email</a></li>
@@ -35,15 +40,15 @@
           <p>The journeys in these prototypes are not connected:</p>
           <ul class="nhsuk-list">
             <li><a href="/sais/campaigns">School vaccination campaigns</a></li>
-          </ul>
+          </ul> #}
 
           <h2 class="nhsuk-heading-m">Other prototypes</h2>
 
-          <p><a href="https://poc-prototype.herokuapp.com/">Point of care prototype</a></p>
+          <p><a href="https://poc-prototype.herokuapp.com/">Record children’s vaccinations prototype</a></p>
 
           <h2 class="nhsuk-heading-m">Design history</h2>
           <p>
-            <a href="http://good-machine-design-history.herokuapp.com/">Design history</a>
+            <a href="https://childhood-vaccinations.designhistory.app/">Design history</a>
           </p>
         </div>
       </div>
