Add birth certificate back
Some kids won't have a passport

--- a/app/views/consent/child.html
+++ b/app/views/consent/child.html
@@ -9,7 +9,7 @@
       text: "Official name"
     },
     hint: {
-      text: "The name on their passport. If their name has changed, tell us their current name."
+      text: "The name on their passport or birth certificate. If their name has changed, tell us their current name."
     },
     decorate: "child.name"
   }) }}
