--- a/app/views/consent/confirmation-no-consent.html
+++ b/app/views/consent/confirmation-no-consent.html
@@ -3,9 +3,9 @@
 
 {% set title %}
   {% if vaccine == "HPV" %}
-    Your child will not get the HPV vaccination at school
+    You’ve told us that you do not want your child to get the HPV vaccine at school
   {% elseif vaccine == "DPT" %}
-    Your child will not get the 3-in-1 teenage booster or MenACWY vaccination at school
+    You have told us that you do not want your child to get the 3-in-1 teenage booster or MenACWY vaccination at school
   {% else %}
     Your child will not get a nasal flu vaccination at school
   {% endif %}
@@ -18,4 +18,9 @@
   <h1 class="{% if vaccine == 'DPT' %}nhsuk-heading-l{% else %}nhsuk-heading-l{% endif %}">{{ title }}</h1>
 
   <p>We’ve sent a confirmation to jane.doe@example.com.</p>
+
+  {% if vaccine == "HPV" %}
+    <p>If your child requests the HPV vaccine on the day of the session, a nurse will assess them for something called Gillick competence.</p>
+    <p>If the nurse decides they’re sufficiently mature to understand the implications of getting the vaccine, they can still receive it.</p>
+  {% endif %}
 {% endblock %}
