--- a/app/views/consent/check-answers.html
+++ b/app/views/consent/check-answers.html
@@ -2,6 +2,7 @@
 {% set title = "Check your answers and confirm" %}
 {% set buttonText = "Confirm" %}
 {% set basePath = '/' + (vaccine | lower) + '/' %}
+{% set gridClass = 'nhsuk-grid-column-full' %}
 {% set consented = data.consent == 'Yes, I agree' or not data.consent %}
 
 {% block form %}
