Simplify start page for flu

--- a/app/views/flu/start.html
+++ b/app/views/flu/start.html
@@ -8,13 +8,7 @@
         <div class="nhsuk-grid-column-two-thirds">
           <h1 class="nhsuk-heading-xl">{{ title }}</h1>
 
-          <p>The vaccination is given as a painless spray into each nostril. It is safe and effective in helping to protect children against flu.</p>
-
-          <p>Flu is caused by the influenza virus, which children can catch and spread easily. It can lead to serious problems, such as bronchitis and pneumonia.</p>
-
-          <p>Vaccinating children also protects others who are vulnerable to flu, such as babies and older people.</p>
-
-          <p class="nhsuk-u-margin-bottom-6">The vaccine is offered annually. This academic year, it will be offered to children in all year groups from Reception through to Year 6.</p>
+          <p class="nhsuk-u-margin-bottom-6">The vaccination helps to protect children against flu. It also protects others who are vulnerable to flu, such as babies and older people.</p>
 
           {{ button({
             text: 'Start now',
