--- a/app/views/consent/confirmation-no-consent.html
+++ b/app/views/consent/confirmation-no-consent.html
@@ -15,7 +15,7 @@
 {% block pageNavigation %}{% endblock %}
 
 {% block form %}
-  <h1 class="{% if vaccine == 'DPT' %}nhsuk-heading-l{% else %}nhsuk-heading-l{% endif %}">{{ title }}</h1>
+  <h1 class="nhsuk-heading-l">{{ title }}</h1>
 
   <p>We’ve sent a confirmation to jane.doe@example.com.</p>
 
