Use first name last name
To work for other NHS systems we need this

--- a/app/views/consent/check-answers.html
+++ b/app/views/consent/check-answers.html
@@ -50,7 +50,7 @@
         rows: decorateRows([
           {
             key: 'Child’s name',
-            data: 'child.name',
+            value: childName,
             href: basePath + 'consent/child'
           },
           {
