--- a/app/views/consent/no-consent-given.html
+++ b/app/views/consent/no-consent-given.html
@@ -2,16 +2,6 @@
 {% set title = "Please tell us why you do not agree" %}
 
 {% block form %}
-  {% set other %}
-    {{ input({
-      label: {
-        classes: "nhsuk-label--s nhsuk-u-margin-bottom-1",
-        text: "Please give details"
-      },
-      decorate: "no-consent-reason-other"
-    }) }}
-  {% endset %}
-
   {{ radios({
     fieldset: {
       legend: {
@@ -30,12 +20,16 @@
         divider: 'or'
       },
       {
-        text: 'Other',
-        conditional: {
-          html: other
-        }
+        text: 'Other'
       }
     ],
     decorate: "no-consent-reason"
+  }) }}
+
+  {{ textarea({
+    label: {
+      text: "Give details (optional)"
+    },
+    decorate: "no-consent-reason-details"
   }) }}
 {% endblock %}
