Make household immunity unique

--- a/app/views/consent/health-household-immune-system.html
+++ b/app/views/consent/health-household-immune-system.html
@@ -31,6 +31,6 @@
       },
       { text: 'No' }
     ],
-    decorate: "health.immune-system"
+    decorate: "health.household-immune-system"
   }) }}
 {% endblock %}
