Add flu consent email

--- a/app/views/emails/hpv-consent.html
+++ b/app/views/emails/hpv-consent.html
@@ -21,7 +21,7 @@
 
   <h2 class="nhsuk-heading-m">Please give or refuse consent</h2>
 
-  <p>If you want your child to receive this vaccine at school, you need to give consent by Friday 2 June.</p>
+  <p>If you want your child to get this vaccine at school, you need to give consent by Friday 2 June.</p>
 
   <p>
     <a href="/hpv/start">Give or refuse consent for the HPV vaccination</a>
