--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@ $govuk-assets-path: "/govuk/assets/";
 @import "govuk-frontend/govuk/all";
 
 // Import GOV.UK Prototype Components
-@import "govuk-prototype-components/x-govuk/all";
+@import "@x-govuk/govuk-prototype-components/x-govuk/all";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 @import "_unbranded.scss";
@@ -31,6 +31,7 @@ $govuk-assets-path: "/govuk/assets/";
 
 .app-summary-list--full-width {
   .nhsuk-summary-list__row {
+
     .nhsuk-summary-list__key,
     .nhsuk-summary-list__value,
     .nhsuk-summary-list__actions {
@@ -43,6 +44,7 @@ $govuk-assets-path: "/govuk/assets/";
 }
 
 .nhsuk-card .nhsuk-summary-list__row:last-child {
+
   .nhsuk-summary-list__key,
   .nhsuk-summary-list__value,
   .nhsuk-summary-list__actions {
