--- a/app/views/layouts/default.html
+++ b/app/views/layouts/default.html
@@ -1,8 +1,8 @@
 {% extends "template.njk" %}
 
 {% block head %}
-  <link rel="stylesheet" href="/public/stylesheets/application.css" media="all">
-  <script src="/public/javascripts/application.js" defer></script>
+  <link rel="stylesheet" href="/public/application.css" media="all">
+  <script src="/public/application.js" defer></script>
 {% endblock %}
 
 {% block pageTitle %}
