Add reminder email about consent for flu vaccination

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,7 @@
           <h2 class="nhsuk-heading-m">Emails</h2>
           <ul class="nhsuk-list">
             <li><a href="/emails/flu-consent">Request consent for flu vaccination</a></li>
+            <li><a href="/emails/flu-reminder">Reminder about consent for flu vaccination</a></li>
             <li><a href="/emails/hpv-consent">Request consent for HPV vaccination</a></li>
             <li><a href="/emails/hpv-reminder">Reminder about consent for HPV vaccination</a></li>
             <li><a href="/emails/hpv-student">Email for students about HPV vaccination</a></li>
