Add route for school not enrolled in pilot
This matches the behaviour we have in the current build

--- a/app/views/consent/school.html
+++ b/app/views/consent/school.html
@@ -29,8 +29,8 @@
       }
     },
     items: [
-      { text: 'Yes, they go to this school' },
-      { text: 'No, I need to pick a different school' }
+      { text: "Yes, they go to this school" },
+      { text: "No, they go to a different school" }
     ],
     decorate: "child.school"
   }) }}
