--- a/app/views/consent/health-asthma-steroids.html
+++ b/app/views/consent/health-asthma-steroids.html
@@ -10,7 +10,7 @@
       hint: {
         text: "Include the steroid name, dose and length of course"
       },
-      decorate: "health.asthma-steroid-details"
+      decorate: "health.asthma-steroids-details"
     }) }}
   {% endset %}
 
@@ -31,6 +31,6 @@
       },
       { text: 'No' }
     ],
-    decorate: "health.asthma-steroid"
+    decorate: "health.asthma-steroids"
   }) }}
 {% endblock %}
