--- a/app/views/consent/health-immune-system.html
+++ b/app/views/consent/health-immune-system.html
@@ -20,7 +20,7 @@
       }
     },
     hint: {
-      text: 'For example, treatment for leukaemia'
+      text: "For example, treatment for leukaemia or taking immunosuppressant medication"
     },
     items: [
       {
