Ability to set no preference for telephone contact method

--- a/app/views/consent/check-answers.html
+++ b/app/views/consent/check-answers.html
@@ -120,8 +120,13 @@
             href: basePath + "consent/parent-guardian?change=true"
           },
           {
-            key: "Phone number",
+            key: "Telephone number",
             data: "parent.telephone",
+            href: basePath + "consent/parent-guardian?change=true"
+          },
+          {
+            key: "Telephone contact method",
+            data: "parent.accessibility",
             href: basePath + "consent/parent-guardian?change=true"
           }
         ])
