Add confirmation emails for flu vaccine

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,6 +17,14 @@
           <ul class="nhsuk-list">
             <li><a href="/emails/flu-consent">Request consent for flu vaccination</a></li>
             <li><a href="/emails/flu-reminder">Reminder about consent for flu vaccination</a></li>
+            <li><a href="/emails/flu-consent-confirmation">Confirmation of agreement for flu vaccination</a></li>
+            <li><a href="/emails/flu-consent-needs-triage">Confirmation of agreement for flu vaccination (needs triage)</a></li>
+            <li><a href="/emails/flu-consent-triage-complete">Confirmation of agreement for flu vaccination (triage complete)</a></li>
+            <li><a href="/emails/flu-consent-injection">Confirmation of agreement for flu vaccination using injection</a></li>
+            <li><a href="/emails/flu-refusal-confirmation">Confirmation of refusal for flu vaccination</a></li>
+            <li><a href="/emails/flu-vaccine-given">Vaccine given</a></li>
+          </ul>
+          <ul class="nhsuk-list">
             <li><a href="/emails/hpv-consent">Request consent for HPV vaccination</a></li>
             <li><a href="/emails/hpv-reminder">Reminder about consent for HPV vaccination</a></li>
             <li><a href="/emails/hpv-student">Email for students about HPV vaccination</a></li>
