Show check your answers page if not given consent

--- a/app/views/consent/check-answers.html
+++ b/app/views/consent/check-answers.html
@@ -3,7 +3,7 @@
 {% set buttonText = "Confirm" %}
 {% set basePath = '/' + (vaccine | lower) + '/' %}
 {% set gridClass = 'nhsuk-grid-column-full' %}
-{% set consented = (data.consent | arrayOrStringIncludes("Yes, I agree")) or not data.consent %}
+{% set consented = (data.consent and data.consent | arrayOrStringIncludes("Yes, I agree")) or not data.consent %}
 
 {% block form %}
   <h1 class="nhsuk-heading-l">{{ title }}</h1>
